--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -25,9 +25,9 @@
 
 .nav-logo {
     height: 160px;
-    position: absolute;
-    top: -112px;
-    left: 45px;
+    position: relative;
+    top: -60px;
+    left: 15px;
 }
 
 .nav-links {
@@ -40,7 +40,6 @@
     width: 700px;
     list-style: none;
     text-transform: uppercase;
-    margin-left: 150px;
 }
 
 .nav-login-link {
