--- a/react-app/src/components/PostIndex/PostIndex.css
+++ b/react-app/src/components/PostIndex/PostIndex.css
@@ -26,7 +26,21 @@
     object-fit: cover;
     width: 100%;
     height: 100%;
+    height: 525px;
     filter: brightness(.8);
+}
+
+.side-featured-img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    height: 262.5px;
+    filter: brightness(.8);
+}
+
+.bottom {
+    position: relative;
+    bottom: 4px;
 }
 
 .featured-user-and-title {
