--- a/react-app/src/components/Comments/Comments.css
+++ b/react-app/src/components/Comments/Comments.css
@@ -4,6 +4,30 @@
     padding: 10px;
     margin-top: 50px;
     margin-bottom: 100px;
+    background-color: white;
+}
+
+.comments-content {
+    padding-top: 10px;
+    height: 300px;
+    overflow-y: auto;
+    border-bottom: 2px solid #d6d6d7;
+    padding-bottom: 10px;
+}
+
+.comments-content::-webkit-scrollbar {
+    width: 20px;
+}
+
+.comments-content::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+.comments-content::-webkit-scrollbar-thumb {
+    background-color: #d6dee1;
+    border-radius: 20px;
+    border: 6px solid transparent;
+    background-clip: content-box;
 }
 
 .comments-title {
@@ -13,6 +37,7 @@
 .comment-user {
     list-style: none;
     color: #3A4148;
+    margin-bottom: 5px;
 }
 
 .comment-timestamp {
@@ -24,6 +49,104 @@
     margin-bottom: 20px;
 }
 
+.delete-comment-button {
+    position: relative;
+    top: 1.5px;
+    font-size: 20px;
+    color: rgba(0, 0, 0, 0.508);
+    cursor: pointer;
+    transition: color .2s ease;
+}
+
+.delete-comment-button:hover {
+    color: red;
+}
+
+.update-comment-button {
+    font-size: 16px;
+    color: rgba(0, 0, 0, 0.508);
+    cursor: pointer;
+    transition: color .2s ease;
+    margin-right: 10px;
+    margin-left: 10px;
+}
+
+.update-comment-button:hover {
+    color: #21BFE1;
+}
+
 .update-comment-form {
-    margin-bottom: 20px;
+    padding: 40px;
+    border: 1px solid #21BFE1;
+    border-radius: 10px;
+}
+
+.update-comment-textarea {
+    font-family: "Rubik", sans-serif;
+    padding-top: 10px;
+    padding-left: 10px;
+    font-size: 14px;
+    height: 80px;
+    width: 600px;
+    border-radius: 10px;
+    border: 1px solid #d6d6d7;
+    transition: all .2s ease-out;
+    resize: none;
+    margin-bottom: 10px;
+}
+
+.update-comment-textarea:focus {
+    outline: none !important;
+    border: 1px solid #21BFE1;
+    box-shadow: 0 0 10px #21bee1a5;
+}
+
+.comment-form-div {
+    margin-top: 40px;
+}
+
+.comment-form-textarea {
+    font-family: "Rubik", sans-serif;
+    resize: none;
+    padding-left: 10px;
+    padding-top: 10px;
+    height: 80px;
+    width: 100%;
+    border-radius: 10px;
+    border: 1px solid #d6d6d7;
+    transition: all .2s ease-out;
+}
+
+.comment-form-textarea:focus {
+    outline: none !important;
+    border: 1px solid #21BFE1;
+    box-shadow: 0 0 10px #21bee1a5;
+}
+
+.comment-form-button-wrapper {
+    display: flex;
+    justify-content: right;
+}
+
+.comment-form-button {
+    margin-top: 5px;
+    margin-right: 5px;
+    font-family: 'Rubik', sans-serif;
+    font-weight: 600;
+    font-size: 16px;
+    height: 40px;
+    width: 160px;
+    letter-spacing: -0.5px;
+    text-transform: uppercase;
+    background-color: #21BFE1;
+    color: white;
+    padding: 10px;
+    border: none;
+    cursor: pointer;
+    box-shadow: none;
+    transition: box-shadow .2s ease-out;
+}
+
+.comment-form-button:hover {
+    box-shadow: 0 0 15px #21bee171;
 }
