--- a/react-app/src/components/PostIndex/PostIndex.css
+++ b/react-app/src/components/PostIndex/PostIndex.css
@@ -59,6 +59,9 @@
     -webkit-text-stroke: 0.75px black;
     font-weight: 700;
     letter-spacing: -1.75px;
+    display: flex;
+    align-items: center;
+    padding-bottom: 2.5px;
 }
 
 .featured-title {
@@ -84,6 +87,8 @@
     font-size: 20px;
     text-shadow: 2px 2px 2px black;
     -webkit-text-stroke: 0.75px black;
+    display: flex;
+    align-items: center;
 }
 
 .side-featured-title {
@@ -100,6 +105,7 @@
     height: 246px;
     width: 438px;
     object-fit: cover;
+    object-position: top;
 }
 
 .more {
@@ -157,8 +163,9 @@
     word-break: break-word;
 }
 
-.relationship {
+.one-post-user-name {
     color: #21BFE1;
+    padding-top: 3px;
 }
 
 .one-post-user {
@@ -166,10 +173,19 @@
     color: #757c83;
     padding-top: 15px;
     text-transform: uppercase;
+    display: flex;
+    align-items: center;
+}
+
+.one-post-profile-pic {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    object-fit: cover;
 }
 
 .one-post-title {
-    padding-top: 22px;
+    padding-top: 15px;
     padding-bottom: 12px;
     font-size: 24px;
     color: #3A4148;
@@ -255,4 +271,46 @@
 
 .side-featured-likes:hover {
     color: #21BFE1;
+}
+
+@media (max-width: 1500px) {
+    .featured-posts > :first-child {
+        grid-column: span 3;
+    }
+
+    .side-post {
+        display: none;
+    }
+
+    .lower-index-grid {
+        grid-template-columns: auto auto;
+    }
+
+    .more_text {
+        text-align: center;
+        font-family: "Rubik", sans-serif;
+        font-weight: 600;
+        letter-spacing: -1.25px;
+        margin: 0 15px;
+        font-size: 20px;
+        color: #757c83;
+        width: 700px;
+    }
+
+    .line {
+        width: 100%;
+        height: 1px;
+        border-bottom: 1px solid #D7D7D6;
+    }
+}
+
+@media (max-width: 1000px) {
+    .lower-index-grid {
+        grid-template-columns: auto;
+    }
+
+    .one-post {
+        width: 600px;
+        margin-bottom: 30px;
+    }
 }
