--- a/react-app/src/components/Comments/Comments.css
+++ b/react-app/src/components/Comments/Comments.css
@@ -62,7 +62,7 @@
     font-size: 20px;
     color: rgba(0, 0, 0, 0.508);
     cursor: pointer;
-    transition: color .2s ease;
+    transition: color .5s ease;
 }
 
 .delete-comment-button:hover {
@@ -73,7 +73,7 @@
     font-size: 16px;
     color: rgba(0, 0, 0, 0.508);
     cursor: pointer;
-    transition: color .2s ease;
+    transition: color .5s ease;
     margin-right: 10px;
     margin-left: 10px;
 }
@@ -97,7 +97,7 @@
     width: 600px;
     border-radius: 10px;
     border: 1px solid #d6d6d7;
-    transition: all .2s ease-out;
+    transition: all .5s ease-out;
     resize: none;
     margin-bottom: 10px;
 }
@@ -126,7 +126,7 @@
     width: 100%;
     border-radius: 10px;
     border: 1px solid #d6d6d7;
-    transition: all .2s ease-out;
+    transition: all .5s ease-out;
 }
 
 .comment-form-textarea:focus {
@@ -156,7 +156,7 @@
     border: none;
     cursor: pointer;
     box-shadow: none;
-    transition: box-shadow .2s ease-out;
+    transition: box-shadow .5s ease-out;
 }
 
 .comment-form-button:hover {
@@ -181,4 +181,20 @@
     margin-left: 40px;
     margin-bottom: 20px;
     margin-top: 10px;
+}
+
+.comment-errors {
+    color: rgb(255, 0, 0);
+    text-align: center;
+    height: 40px;
+}
+
+.comment-profile-link {
+    text-decoration: none;
+    color: #333;
+    transition: color .5s ease;
+}
+
+.comment-profile-link:hover {
+    color: #21BFE1
 }
