--- a/react-app/src/components/Comments/Comments.css
+++ b/react-app/src/components/Comments/Comments.css
@@ -8,7 +8,7 @@
 }
 
 .comments-content {
-    padding-top: 10px;
+    padding-top: 20px;
     height: 600px;
     overflow-y: scroll;
     border-bottom: 2px solid #d6d6d7;
@@ -174,7 +174,7 @@
 }
 
 .one-comment {
-    background-color: #21bee109;
+    background-color: #f5f7f9;
     border-radius: 10px;
     border: 1px solid #d6d6d7;
     margin-right: 20px;
