--- a/react-app/src/components/SinglePost/SinglePost.css
+++ b/react-app/src/components/SinglePost/SinglePost.css
@@ -57,4 +57,9 @@
 
 .single-post-likes {
     cursor: pointer;
+    transition: color .5s ease;
+}
+
+.single-post-likes:hover {
+    color: #21BFE1;
 }
