--- a/react-app/src/components/PostIndex/PostIndex.css
+++ b/react-app/src/components/PostIndex/PostIndex.css
@@ -129,11 +129,12 @@
 .more_text {
     font-family: "Rubik", sans-serif;
     font-weight: 600;
-    letter-spacing: -1.25px;
+    letter-spacing: -0.5px;
     margin: 0 15px;
     font-size: 20px;
     color: #757c83;
-    width: 610px;
+    width: 400px;
+    text-align: center;
 }
 
 .line {
