--- a/react-app/src/components/auth/LoginForm.css
+++ b/react-app/src/components/auth/LoginForm.css
@@ -34,6 +34,7 @@
     border-radius: 10px;
     border: 1px solid #d6d6d7;
     transition: all .5s ease-out;
+    padding: 0 8px;
 }
 
 .login-input:focus {
