--- a/react-app/src/components/PostIndex/PostIndex.css
+++ b/react-app/src/components/PostIndex/PostIndex.css
@@ -111,11 +111,37 @@
     color: #21BFE1;
 }
 
+.one-post {
+    width: 630px;
+    height: 652px;
+    border: 1px solid #d7d7d7;
+    transition: all 0.5s ease-out;
+}
+
+.one-post:hover {
+    box-shadow: 0 0 10px #000000;
+}
+
+.one-post-img-container {
+    height: 450px;
+    position: relative;
+}
+
 .one-post-img {
-    height: 246px;
+    height: 450px;
     width: 438px;
     object-fit: cover;
     object-position: top;
+    width: 100%;
+}
+
+.one-post-content {
+    position: relative;
+    background-color: white;
+    font-family: "Rubik", sans-serif;
+    height: 200px;
+    padding: 0 22px;
+    word-break: break-word;
 }
 
 .more {
@@ -145,39 +171,11 @@
 
 .lower-index-grid {
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: auto auto;
     justify-content: center;
-    gap: 27px;
+    column-gap: 80px;
+    row-gap: 80px;
     padding-bottom: 100px;
-}
-
-.one-post {
-    width: 438px;
-    height: 515px;
-    border: 1px solid #d7d7d7;
-    transition: all 0.5s ease-out;
-}
-
-.one-post:hover {
-    box-shadow: 0 0 10px #000000;
-}
-
-.one-post-img-container {
-    height: 246px;
-    position: relative;
-}
-
-.one-post-img {
-    width: 100%;
-}
-
-.one-post-content {
-    position: relative;
-    background-color: white;
-    font-family: "Rubik", sans-serif;
-    height: 267px;
-    padding: 0 22px;
-    word-break: break-word;
 }
 
 .one-post-user-name {
@@ -258,7 +256,7 @@
 .one-post-footer {
     position: absolute;
     bottom: 22px;
-    font-size: 18px;
+    font-size: 20px;
     color: #3A4148;
     cursor: pointer;
     width: 100%;
@@ -379,6 +377,15 @@
 
 .confirm-delete-button-no:hover {
     box-shadow: 0 0 15px #21bee171;
+}
+
+.follow-more-users {
+    margin-top: 200px;
+    font-family: "Rubik", sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50vh;
 }
 
 @media (max-width: 1500px) {
