--- a/react-app/src/components/ProfilePage/ProfilePage.css
+++ b/react-app/src/components/ProfilePage/ProfilePage.css
@@ -208,19 +208,9 @@
     color: #21BFE1;
 }
 
-@media (max-width: 1500px) {
+@media (max-width: 1024px) {
     .profile-grid {
         grid-template-columns: auto auto;
-    }
-}
-
-@media (max-width: 1000px) {
-    .profile-grid {
-        grid-template-columns: auto;
-    }
-
-    .one-profile-post {
-        margin-bottom: 40px;
-        width: 500px;
+        row-gap: 60px;
     }
 }
