--- a/react-app/src/components/Comments/Comments.css
+++ b/react-app/src/components/Comments/Comments.css
@@ -54,6 +54,9 @@
     margin-bottom: 20px;
     padding: 10px 20px;
     word-break: break-word;
+    font-size: 18.5px;
+    line-height: 22px;
+    font-family: "Questrial", sans-serif;
 }
 
 .delete-comment-button {
@@ -62,7 +65,7 @@
     font-size: 20px;
     color: rgba(0, 0, 0, 0.508);
     cursor: pointer;
-    transition: color .5s ease;
+    transition: color .2s ease;
 }
 
 .delete-comment-button:hover {
@@ -73,7 +76,7 @@
     font-size: 16px;
     color: rgba(0, 0, 0, 0.508);
     cursor: pointer;
-    transition: color .5s ease;
+    transition: color .2s ease;
     margin-right: 10px;
     margin-left: 10px;
 }
@@ -89,15 +92,14 @@
 }
 
 .update-comment-textarea {
-    font-family: "Rubik", sans-serif;
     padding-top: 10px;
     padding-left: 10px;
-    font-size: 14px;
+    font-size: 18px;
     height: 80px;
     width: 600px;
     border-radius: 10px;
     border: 1px solid #d6d6d7;
-    transition: all .5s ease-out;
+    transition: all .2s ease-out;
     resize: none;
     margin-bottom: 10px;
 }
@@ -118,7 +120,7 @@
 }
 
 .comment-form-textarea {
-    font-family: "Rubik", sans-serif;
+    font-size: 18px;
     resize: none;
     padding-left: 10px;
     padding-top: 10px;
@@ -126,7 +128,7 @@
     width: 100%;
     border-radius: 10px;
     border: 1px solid #d6d6d7;
-    transition: all .5s ease-out;
+    transition: all .2s ease-out;
 }
 
 .comment-form-textarea:focus {
@@ -143,12 +145,12 @@
 .comment-form-button {
     margin-top: 15px;
     margin-right: 5px;
-    font-family: 'Rubik', sans-serif;
+
     font-weight: 600;
     font-size: 16px;
     height: 40px;
     width: 160px;
-    letter-spacing: -0.5px;
+
     text-transform: uppercase;
     background-color: #21BFE1;
     color: white;
@@ -156,7 +158,7 @@
     border: none;
     cursor: pointer;
     box-shadow: none;
-    transition: box-shadow .5s ease-out;
+    transition: box-shadow .2s ease-out;
 }
 
 .comment-form-button:hover {
@@ -192,7 +194,7 @@
 .comment-profile-link {
     text-decoration: none;
     color: #333;
-    transition: color .5s ease;
+    transition: color .2s ease;
 }
 
 .comment-profile-link:hover {
