--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -18,11 +18,6 @@
     margin: 0 auto;
 }
 
-.profile-lines {
-    font-size: 20px;
-    color: #808A8C;
-}
-
 .nav-logo {
     margin-left: 10px;
     height: 160px;
@@ -30,10 +25,8 @@
 }
 
 .nav-links {
-    font-family: 'Rubik', sans-serif;
     font-weight: 600;
     font-size: 18px;
-    letter-spacing: -0.5px;
     display: flex;
     justify-content: right;
     width: 500px;
@@ -45,26 +38,35 @@
     text-decoration: none;
     color: black;
     cursor: pointer;
-    transition: color .5s ease;
+    transition: color .2s ease;
     color: rgba(0, 0, 0, 0.508);
     margin-right: 30px;
+    font-family: "Fjalla One", sans-serif;
+    letter-spacing: 0.5px;
+    font-size: 22px;
 }
 
 .nav-login-link-last {
     text-decoration: none;
     color: black;
     cursor: pointer;
-    transition: color .5s ease;
+    transition: color .2s ease;
     color: rgba(0, 0, 0, 0.508);
+    font-family: "Fjalla One", sans-serif;
+    letter-spacing: 0.5px;
+    font-size: 22px;
 }
 
 .nav-signup-link {
     text-decoration: none;
     color: black;
     cursor: pointer;
-    transition: color .5s ease;
+    transition: color .2s ease;
     color: rgba(0, 0, 0, 0.508);
     margin-right: 30px;
+    font-family: "Fjalla One", sans-serif;
+    letter-spacing: 0.5px;
+    font-size: 22px;
 }
 
 .nav-login-link:hover,
@@ -73,26 +75,26 @@
     color: #21BFE1;
 }
 
-.nav-update {
+.nav-create {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: 'Rubik', sans-serif;
     font-weight: 600;
-    font-size: 18px;
-    height: 34px;
+    font-size: 22px;
+    height: 38px;
     width: 150px;
-    letter-spacing: -0.5px;
     text-transform: uppercase;
     background-color: #21BFE1;
     color: white;
     padding: 10px;
     cursor: pointer;
-    transition: box-shadow .5s ease;
+    transition: box-shadow .25s ease;
+    font-family: "Fjalla One", sans-serif;
+    letter-spacing: 0.5px;
 }
 
-.nav-update:hover {
-    box-shadow: 0 0 15px #21bee171;
+.nav-create:hover {
+    box-shadow: 0 0 20px #21bee171;
 }
 
 .envelope {
@@ -106,15 +108,15 @@
 
 .slogan {
     color: rgba(0, 0, 0, 0.508);
-    font-family: 'Rubik', sans-serif;
     font-weight: 600;
-    font-size: 18px;
-    letter-spacing: -0.5px;
+    font-size: 22px;
     display: flex;
     justify-content: left;
     width: 400px;
     list-style: none;
     text-transform: uppercase;
+    font-family: "Fjalla One", sans-serif;
+    letter-spacing: 0.5px;
 }
 
 .no-underline {
