--- a/react-app/src/components/SinglePost/SinglePost.css
+++ b/react-app/src/components/SinglePost/SinglePost.css
@@ -3,16 +3,17 @@
     flex-direction: column;
     max-width: 780px;
     margin: 0 auto;
-    font-family: 'Rubik', sans-serif;
+
 }
 
 .single-post-title {
     margin-top: 107px;
     margin-bottom: 24px;
     word-break: break-word;
-    font-size: 42px;
+    font-size: 46px;
     text-transform: capitalize;
-    letter-spacing: -1px;
+    font-family: "Fjalla One", sans-serif;
+    letter-spacing: 0.5px;
 }
 
 .single-post-img {
@@ -49,7 +50,7 @@
 
 .single-post-body {
     margin: 17px 0;
-    font-size: 18px;
+    font-size: 21px;
     font-weight: 400;
     word-break: break-word;
     white-space: pre-wrap;
@@ -57,7 +58,7 @@
 
 .single-post-likes {
     cursor: pointer;
-    transition: color .5s ease;
+    transition: color .2s ease;
 }
 
 .single-post-likes:hover {
