--- a/react-app/src/components/ViewFollows/ViewFollows.css
+++ b/react-app/src/components/ViewFollows/ViewFollows.css
@@ -1,7 +1,6 @@
 .follows-modal {
     padding: 10px 20px;
-    width: 480px;
-    font-family: "Rubik", sans-serif;
+    width: 510px;
     border: 2px solid #21BFE1;
     border-radius: 10px;
     background-color: #f5f7f9;
@@ -10,13 +9,14 @@
 .follows-title {
     text-align: center;
     padding-bottom: 12px;
+    margin-top: 10px;
     border-bottom: 1px solid #d6d6d7;
     font-size: 22px;
 }
 
 .follows-content {
     overflow: auto;
-    height: 380px;
+    height: 450px;
     width: 100%;
     margin-bottom: 20px;
 }
@@ -67,7 +67,7 @@
 .follows-profile-link {
     text-decoration: none;
     color: rgba(51, 51, 51, 0.83);
-    transition: all .5s ease;
+    transition: all .2s ease;
 }
 
 .follows-profile-link:hover {
@@ -83,7 +83,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: 'Rubik', sans-serif;
     font-weight: 600;
     font-size: 18px;
     height: 40px;
@@ -93,7 +92,7 @@
     color: white;
     padding: 10px;
     cursor: pointer;
-    transition: all .5s ease;
+    transition: all .2s ease;
     margin-right: 10px;
 }
 
