--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -1,9 +1,8 @@
-/* TODO Add site wide styles */
-
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Rubik", sans-serif;
 }
 
 body {
@@ -62,5 +61,5 @@ body {
 }
 
 .modal.follows-show {
-    bottom: 35vh;
+    bottom: 30vh;
 }
